# simple

./: .dockerignore  .envrc  .gitattributes  .gitignore  .gitmodules  .jjignore  .jscpd.json  .mcp.json  .simple-test-checkpoint.sdn  .spipe_matchers_sm4_mini_spec.spl  :memory:  ADVANCED_TYPE_SYSTEM_COMPLETE_2026-02-14.md  AGENTS.md  ASYNC_COMPLETE.md  ASYNC_PARSER_IMPLEMENTATION.md  ASYNC_RUNTIME_TEST_SUMMARY.md  BAREMETAL_COMPLETE.md  BOOTSTRAP_COMPLETE_TRANSPILER.md  BOOTSTRAP_FINAL_STATUS.md  BOOTSTRAP_FIX_PLAN.md  BOOTSTRAP_LINUX.md  BOOTSTRAP_NATIVE_FIXES.md  BOOTSTRAP_PROGRESS_2026-02-14-FINAL.md  BOOTSTRAP_STATUS.md  BOOTSTRAP_SUCCESS_SUMMARY.md  BUG_FIX_PLAN.md  CHANGELOG.md  CHANGELOG_0.3.0.md  CHANGELOG_treesitter_2026-01-22.md  CHAR_FROM_CODE_OPPORTUNITY.md  CI_CD_SETUP_SUMMARY.md  CI_EXECUTION_STATUS.md  CLAUDE.md  COMMIT_MESSAGE.md  COMMIT_MESSAGE.txt  COMPILER_CORE_TO_FULL_PLAN.md  COMPILER_VS_COMPILER_CORE_ANALYSIS.md  CONSTRUCTOR_FIXES_SUMMARY.md  CONTAINER_BACKEND_README.md  CORE_FULL_COMPILATION_PLAN.md  (+403 more)
examples/cuda_exercise/: .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  FINAL_TEST_RESULTS.md  LICENSE  MODE_FIXES_SUMMARY.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.nl.md  README.pt.md  README.ru.md  README.zh.md  VERSION_HISTORY.md  cufile.json  install-vscode-extensions.bat  module57_perf_results_20251123_045904.txt  module57_test_results_20251123.txt  package-lock.json  test_all_modes.sh  test_modes_1_5.sh
examples/korean_stock_mcp/: .env.example  README.md  protocol.spl  pyproject.toml
rust/ffi_codegen/: Cargo.toml
rust/ffi_serde/: Cargo.toml
rust/ffi_syscalls/: Cargo.toml
rust/lsp/: Cargo.toml
rust/pkg/: Cargo.toml
rust/runtime/: Cargo.toml
rust/test/: Cargo.toml  diagnostics_i18n_integration.rs  mixin_tests.rs
seed/: ARCHITECTURE.md  CMakeLists.txt  QUICK_WINDOWS_BUILD.md  README.md  WINDOWS_BUILD.md  c_runtime_test.c  runtime.c  runtime.h  runtime_branch_test.c  runtime_test.c  runtime_thread.c  runtime_thread.h  seed.c  seed.cpp  seed_branch_test.cpp  seed_test.cpp  test-windows-builds.sh
seed/.build-coverage/: CMakeCache.txt  Makefile  c_runtime_test  cmake_install.cmake  runtime_test  seed  seed_cpp  seed_test
seed/build-macos/: Makefile  seed
seed/build-mingw/: .ninja_log  CMakeCache.txt
seed/platform/: PLATFORM_API.md  platform.h  platform_win.h  test_cpu_common.h  test_platform.h  test_platform_win.h  test_x86_64.h  unix_common.h
src/common/: Cargo.toml
src/compiler/: Cargo.toml  PHASE_FILES.md  README.md  __init__.spl  adapters  alloc_checker.spl  aop.spl  aop_proceed.spl  aop_proceed_minimal.spl  api_surface.spl  arch_rules.spl  associated_types_phase4a.spl  associated_types_phase4b.spl  associated_types_phase4c.spl  associated_types_phase4d.spl  ast.spl  async_integration.spl  attributes.spl  backend  backend.spl  backend_port.spl  backend_types.spl  baremetal  bidir_phase1a.spl  bidir_phase1b.spl  bidir_phase1c.spl  bidir_phase1d.spl  bitfield.spl  blocks  blocks.spl  bootstrap_main.spl  bootstrap_main_minimal.spl  bootstrap_types_main.spl  borrow_check  build_log.spl  build_mode.spl  build_native.spl  callconv_bridge.spl  calling_convention.spl  codegen.spl  (+213 more)
src/compiler_cpp/: CMakeLists.txt  bootstrap_v1.cpp  bootstrap_v2.cpp  c_codegen.c  c_codegen_defs.c  c_helpers.c  c_runtime.c  c_translate.c  c_translate_decl.c  c_translate_stmt.c  cmake_gen.c  compile_entry.c  gen_c_only.c  io_file_shell.c  main.c  main.cpp  native.c  real_compiler.c  simple_helpers.h
src/compiler_seed/: ARCHITECTURE.md  CMakeLists.txt  README.md  WINDOWS_BUILD.md  run_coverage.sh  runtime.c  runtime.h  runtime_test.c  seed.cpp  seed_test.cpp
src/diagnostics/: ARCHITECTURE.md  Cargo.toml  __init__.spl  diagnostic.spl  i18n_context.spl  severity.spl
src/driver/: Cargo.toml  build.rs
src/embedded/: Cargo.toml
src/i18n/: Cargo.toml  README.md  __init__.ko.spl  __init__.spl  build.rs  common.spl  compiler.spl  error_codes_runtime.spl  error_codes_semantic.spl  explanations.spl  lint.spl  parser.spl  runtime.spl  strings_advanced.ko.spl  strings_advanced.spl  strings_codegen.ko.spl  strings_codegen.spl  strings_common.ko.spl  strings_common.spl  strings_explanations.ko.spl  strings_explanations.spl  strings_extended.ko.spl  strings_extended.spl  strings_lint.ko.spl  strings_lint.spl  strings_runtime.ko.spl  strings_runtime.spl  strings_semantic.ko.spl  strings_semantic.spl  strings_verification.ko.spl  strings_verification.spl  verification.spl
src/loader/: Cargo.toml
src/parser/: Cargo.toml
src/runtime/: .gitignore  Cargo.toml  async_driver.c  hooks.spl  hosted_win32.c  runtime.c  runtime.h  runtime_audio.c  runtime_audio_effects.c  runtime_base64.c  runtime_crypto.c  runtime_ctype.c  runtime_db.c  runtime_directx_core.c  runtime_dynload.c  runtime_env.c  runtime_equality.c  runtime_fd_core.c  runtime_font.c  runtime_fork.c  runtime_fork.h  runtime_format.c  runtime_hash.c  runtime_hosted_fs.c  runtime_hosted_gpu_stubs.c  runtime_hosted_signal.c  runtime_image.c  runtime_legacy_core.c  runtime_memory.c  runtime_memtrack.c  runtime_memtrack.h  runtime_memtrack_rust.rs  runtime_native.c  runtime_pool.c  runtime_process.c  runtime_random.c  runtime_regex_stub.c  runtime_signal.c  runtime_simd_case.c  runtime_simd_dispatch.c  (+15 more)
src/stub/: Cargo.toml
tests/: Cargo.toml  diagnostics_i18n_integration.rs  mixin_tests.rs
tests/bdd/: main.rs
tests/env_test/: io_tests.rs  main.rs
tests/environment/: main.rs
tests/integration/: compiler_integration.rs  compiler_integration2.rs  parser_integration.rs  pkg_integration.rs  type_integration.rs  vulkan_integration.rs
tests/it/: compiler_integration.rs  compiler_integration2.rs  driver_integration.rs  main.rs
tests/meta/: comment_only_spec.spl
tests/specs/: async_default_spec.spl  capability_effects_spec.spl  concurrency_spec.spl  data_structures_spec.spl  functions_spec.spl  memory_spec.spl  metaprogramming_spec.spl  sandboxing_spec.spl  shell_api_spec.spl  suspension_operator_spec.spl  (+4 more)
(+116711 files in other folders)
