[workspace]
resolver = "2"
members = [
    "src/parser",
    "src/loader",
    "src/compiler",
    "src/native_loader",
    "src/lib",
    "src/common",
    "src/runtime",
    "src/driver",
    "src/pkg",
    "src/dependency_tracker",
    "src/simd",
    "src/gpu",
    "src/embedded",
    "src/stub",
    "src/ui",
    "src/db",
    "src/sqp",
    "src/sdn",
    "log",
    "src/type",
    "src/lsp",
    "src/dap",
    "src/util/simple_mock_helper",
    "src/util/arch_test",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"

# Allocators (#825-827) - Platform-specific (use features in crates to enable)
tikv-jemallocator = "0.6"
mimalloc = "0.1"

# Threading & Concurrency (#828-832)
rayon = "1.10"
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Hashing Libraries (#836-839)
sha1 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"

# Data Structures (#840-845)
typed-arena = "2.0"
bumpalo = "3.16"
lasso = { version = "0.7", features = ["multi-threaded"] }
smallvec = "1.13"
indexmap = "2.7"
bitvec = "1.0"

# I/O & Serialization (#846-849)
memmap2 = "0.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[workspace.lints.rust]
unused_imports = "warn"
unused_variables = "warn"
unused_mut = "warn"
dead_code = "warn"
unreachable_code = "warn"
unused_must_use = "warn"
