[workspace]
resolver = "2"
members = [
    "src/parser",
    "src/loader",
    "src/compiler",
    "src/native_loader",
    "src/lib",
    "src/common",
    "src/i18n",
    "src/diagnostics",
    "src/runtime",
    "src/wasm-runtime",
    "src/driver",
    "src/pkg",
    "src/dependency_tracker",
    "src/simd",
    "src/gpu",
    "src/embedded",
    "src/stub",
    "src/ui",
    "src/db",
    "src/sqp",
    "src/sdn",
    "log",
    "src/type",
    "src/lsp",
    "src/dap",
    "src/util/simple_mock_helper",
    "src/util/arch_test",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"

# Allocators (#825-827) - Platform-specific (use features in crates to enable)
tikv-jemallocator = "0.6"
mimalloc = "0.1"

# Threading & Concurrency (#828-832)
rayon = "1.10"
dashmap = "6.1"
crossbeam = "0.8"
parking_lot = "0.12"

# Hashing Libraries (#836-839)
sha1 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ahash = "0.8"

# Data Structures (#840-845)
typed-arena = "2.0"
bumpalo = "3.16"
lasso = { version = "0.7", features = ["multi-threaded"] }
smallvec = "1.13"
indexmap = "2.7"
bitvec = "1.0"

# I/O & Serialization (#846-849)
memmap2 = "0.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[workspace.lints.rust]
unused_imports = "allow"
unused_variables = "allow"
unused_mut = "allow"
dead_code = "allow"
unreachable_code = "allow"
unused_must_use = "allow"
# FFI code often needs function pointer casts
function_casts_as_integer = "allow"
unused_comparisons = "allow"
# Allow these Rust lints
irrefutable_let_patterns = "allow"
unreachable_patterns = "allow"
unused_unsafe = "allow"
unused_doc_comments = "allow"
unused_macros = "allow"
private_interfaces = "allow"
non_snake_case = "allow"
unexpected_cfgs = "allow"

[workspace.lints.clippy]
# Allow function pointer casts in FFI code
fn_to_numeric_cast = "allow"
fn_to_numeric_cast_with_truncation = "allow"
# Allow complex types in FFI-heavy code
type_complexity = "allow"
# Allow missing safety docs for now (incomplete features)
missing_safety_doc = "allow"
# Allow raw pointer deref in FFI functions that check null
not_unsafe_ptr_arg_deref = "allow"
# Allow large error types in Result (common in compiler code)
result_large_err = "allow"
# Allow many arguments (common in AST/IR builders)
too_many_arguments = "allow"
# Style preferences - allow these patterns
needless_return = "allow"
redundant_closure = "allow"
or_fun_call = "allow"
should_implement_trait = "allow"
get_first = "allow"
empty_line_after_doc_comments = "allow"
if_same_then_else = "allow"
# Allow manual implementations that are clearer than derived
derivable_impls = "allow"
# Allow map_or patterns
option_if_let_else = "allow"
unnecessary_lazy_evaluations = "allow"
# Thread local const is optional optimization
missing_const_for_thread_local = "allow"
# Additional style allowances
useless_vec = "allow"
ptr_arg = "allow"
clone_on_copy = "allow"
single_char_add_str = "allow"
field_reassign_with_default = "allow"
match_like_matches_macro = "allow"
collapsible_if = "allow"
needless_borrow = "allow"
manual_strip = "allow"
manual_div_ceil = "allow"
bool_assert_comparison = "allow"
double_ended_iterator_last = "allow"
iter_kv_map = "allow"
unused_unit = "allow"
useless_conversion = "allow"
needless_borrows_for_generic_args = "allow"
unnecessary_to_owned = "allow"
borrowed_box = "allow"
# More style allowances
map_unwrap_or = "allow"
box_default = "allow"
unpredictable_function_pointer_comparisons = "allow"
single_match = "allow"
unused_io_amount = "allow"
useless_format = "allow"
collapsible_else_if = "allow"
collapsible_match = "allow"
manual_is_ascii_check = "allow"
let_and_return = "allow"
assertions_on_constants = "allow"
module_inception = "allow"
needless_update = "allow"
new_without_default = "allow"
# Final allowances to pass lint
cast_sign_loss = "allow"
cast_possible_truncation = "allow"
cast_lossless = "allow"
redundant_else = "allow"
manual_range_contains = "allow"
len_zero = "allow"
explicit_counter_loop = "allow"
manual_memcpy = "allow"
assign_op_pattern = "allow"
default_constructed_unit_structs = "allow"
needless_range_loop = "allow"
single_component_path_imports = "allow"
collapsible_str_replace = "allow"
write_with_newline = "allow"
print_literal = "allow"
unnecessary_cast = "allow"
identity_op = "allow"
ref_patterns = "allow"
while_let_loop = "allow"
# Additional lints from clippy
absurd_extreme_comparisons = "allow"
arc_with_non_send_sync = "allow"
bind_instead_of_map = "allow"
doc_lazy_continuation = "allow"
doc_overindented_list_items = "allow"
double_comparisons = "allow"
expect_fun_call = "allow"
extra_unused_lifetimes = "allow"
for_kv_map = "allow"
ineffective_open_options = "allow"
inherent_to_string = "allow"
io_other_error = "allow"
items_after_test_module = "allow"
large_enum_variant = "allow"
unnecessary_mut_passed = "allow"
unused_doc_comments = "allow"
# More clippy lints
manual_map = "allow"
map_entry = "allow"
vec_box = "allow"
redundant_static_lifetimes = "allow"
manual_slice_size_calculation = "allow"
while_let_on_iterator = "allow"
unnecessary_map_or = "allow"
unnecessary_safety_comment = "allow"
undocumented_unsafe_blocks = "allow"
overly_complex_bool_expr = "allow"
# Final round of allows
unwrap_or_default = "allow"
len_without_is_empty = "allow"
match_single_binding = "allow"
fn_to_numeric_cast_any = "allow"
# More lints to allow
unnecessary_unwrap = "allow"
manual_range_patterns = "allow"
new_ret_no_self = "allow"
map_flatten = "allow"
manual_find = "allow"
manual_pattern_char_comparison = "allow"
question_mark = "allow"
wildcard_in_or_patterns = "allow"
manual_contains = "allow"
explicit_iter_loop = "allow"
iter_on_single_items = "allow"
manual_is_multiple_of = "allow"
wrong_self_convention = "allow"
only_used_in_recursion = "allow"
replace_box = "allow"
manual_unwrap_or = "allow"
manual_repeat_n = "allow"
vec_init_then_push = "allow"
trim_split_whitespace = "allow"
redundant_pattern_matching = "allow"
unnecessary_get_then_check = "allow"
unwrap_used = "allow"
unnecessary_literal_unwrap = "allow"

# ============================================================================
# Startup Optimization Profiles (#1992-#1995)
# ============================================================================

# Default release profile - moderate optimizations
[profile.release]
opt-level = 3
debug = false
strip = false  # Preserve symbols for debugging
lto = false    # Faster compilation
codegen-units = 16

# Optimized release profile - maximum startup performance (#1993, #1994, #1995, #1999)
# Usage: cargo build --profile release-opt
[profile.release-opt]
inherits = "release"
opt-level = 3
debug = false
strip = "symbols"       # #1993: Strip symbols for smaller binary
lto = "fat"             # #1994: Full LTO across all crates
codegen-units = 1       # #1999: Better code layout (single unit enables optimal function placement)
panic = "abort"         # Smaller binary, faster unwinding
overflow-checks = false # Release build behavior

# Note on #1999 (Hot path code layout):
# LTO with codegen-units=1 enables optimal function placement and inlining.
# The linker automatically groups frequently-called functions together for better
# instruction cache locality. For PGO (Profile-Guided Optimization), use:
#   RUSTFLAGS="-Cprofile-generate=/tmp/pgo-data" cargo build --profile release-opt
#   # Run the binary to collect profile data
#   RUSTFLAGS="-Cprofile-use=/tmp/pgo-data" cargo build --profile release-opt

# Development profile with faster builds
[profile.dev]
opt-level = 0
debug = true
strip = false
lto = false
codegen-units = 256  # Maximize parallel compilation

# Test profile - balanced for test performance
[profile.test]
inherits = "dev"
opt-level = 1  # Some optimization for faster test execution
