[package]
name = "simple-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
simple-driver = { path = "../src/driver" }
simple-compiler = { path = "../src/compiler" }
simple-parser = { path = "../src/parser" }
simple-loader = { path = "../src/loader" }
simple-runtime = { path = "../src/runtime" }
simple-common = { path = "../src/common" }
simple_mock_helper = { path = "../src/util/simple_mock_helper" }

[dev-dependencies]
ctor = "0.2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"

# Test executables per test.md policy
[[test]]
name = "unit"
path = "unit/main.rs"

[[test]]
name = "it"
path = "it/main.rs"

[[test]]
name = "system"
path = "system/main.rs"

[[test]]
name = "env_test"
path = "env_test/main.rs"
