[package]
name = "simple-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
vulkan = ["simple-compiler/vulkan", "simple-runtime/vulkan"]

[dependencies]
simple-driver = { path = "../src/driver" }
simple-compiler = { path = "../src/compiler" }
simple-parser = { path = "../src/parser" }
simple-loader = { path = "../src/loader" }
simple-runtime = { path = "../src/runtime" }
simple-common = { path = "../src/common" }
simple-type = { path = "../src/type" }
simple-pkg = { path = "../src/pkg" }
simple-dependency-tracker = { path = "../src/dependency_tracker" }
simple_mock_helper = { path = "../src/util/simple_mock_helper" }

[dev-dependencies]
ctor = "0.2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
chrono = "0.4"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Test executables per test.md policy
[[test]]
name = "unit"
path = "unit/main.rs"

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "system"
path = "system/main.rs"

[[test]]
name = "environment"
path = "environment/main.rs"

[[test]]
name = "bdd_mixins"
path = "bdd/main.rs"
harness = false  # cucumber provides its own test harness
