[package]
name = "simple-tests"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
vulkan = ["simple-compiler/vulkan", "simple-runtime/vulkan"]

[dependencies]
simple-driver = { path = "../src/rust/driver" }
simple-compiler = { path = "../src/rust/compiler" }
simple-parser = { path = "../src/rust/parser" }
simple-loader = { path = "../src/rust/loader" }
simple-runtime = { path = "../src/rust/runtime" }
simple-common = { path = "../src/rust/common" }
simple-type = { path = "../src/rust/type" }
simple-pkg = { path = "../src/rust/pkg" }
simple-dependency-tracker = { path = "../src/rust/dependency_tracker" }
simple_mock_helper = { path = "../src/rust/util/simple_mock_helper" }

[dev-dependencies]
ctor = "0.2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
chrono = "0.4"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

# Test executables per test.md policy
[[test]]
name = "unit"
path = "unit/main.rs"

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "system"
path = "system/main.rs"

[[test]]
name = "environment"
path = "environment/main.rs"

[[test]]
name = "bdd_mixins"
path = "bdd/main.rs"
harness = false  # cucumber provides its own test harness
