cmake_minimum_required(VERSION 3.18 FATAL_ERROR)

# Prevent in-source builds
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_BINARY_DIR)
    message(FATAL_ERROR "In-source builds are not allowed. Please create a build directory and run cmake from there.")
endif()

# Set CUDA toolkit root
set(CMAKE_CUDA_COMPILER /usr/local/cuda-13.0/bin/nvcc)
set(CUDAToolkit_ROOT /usr/local/cuda-13.0)

# Set CUDA architectures before project
# 75=Turing, 80=Ampere, 86=Lovelace, native for current GPU, all for compatibility. See https://developer.nvidia.com/cuda-gpus
set(CMAKE_CUDA_ARCHITECTURES 75;80;86) 

# Enable CUDA language
project(cuda_project LANGUAGES CXX CUDA)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_STANDARD 20)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)

# Global settings
set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
set(CMAKE_CUDA_RESOLVE_DEVICE_SYMBOLS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(CUDAToolkit REQUIRED)
find_package(Python3 COMPONENTS Interpreter REQUIRED)

# Remove system libraries from CUDA device linking to avoid nvlink warnings
# These libraries (pthread, rt, dl) are only needed for host linking, not device linking
# Must be set AFTER find_package(CUDAToolkit)
list(REMOVE_ITEM CMAKE_CUDA_IMPLICIT_LINK_LIBRARIES "pthread" "rt" "dl")

# Testing support
enable_testing()

# FetchContent for downloading Google Test
include(FetchContent)
FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG v1.14.0
)
# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Include Google Test's CMake utilities
include(CTest)
include(GoogleTest)

# Add custom CUDA utilities library
add_subdirectory(00.cuda_custom_lib)
add_subdirectory(00.test_lib)


set(GTEST_BASIC_LIB GTest::gtest GTest::gmock GTestCudaMain GTestCudaGenerator)
set(GTEST_BASIC_NO_MAIN_LIB GTest::gtest GTest::gmock GTestCudaGenerator)

# Platform-specific libraries for NVTX dynamic loading
if(WIN32)
    # Windows doesn't need explicit dl library
    set(NVTX_PLATFORM_LIBS "")
else()
    # Unix-like systems (Linux, macOS) need dl for dlopen/dlsym
    set(NVTX_PLATFORM_LIBS dl)
endif()

# Compiler flags for different build types
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_options(
        "$<$<COMPILE_LANGUAGE:CUDA>:-g;-G;-O0>"
        "$<$<COMPILE_LANGUAGE:CXX>:-g3;-O0>"
    )
    set(CUDA_BASIC_LIB CUDA::cudart CUDA::nvtx3 CudaCustomLib ${NVTX_PLATFORM_LIBS})
    option(ENABLE_PROFILING "Enable profiling instrumentation" ON)
elseif(CMAKE_BUILD_TYPE STREQUAL "Profile")
    # Profile flags: Optimized with debug info
    add_compile_options(
        "$<$<COMPILE_LANGUAGE:CUDA>:-g;-G;-O2>"
        "$<$<COMPILE_LANGUAGE:CXX>:-g3;-O2>"
    )
    set(CUDA_BASIC_LIB CUDA::cudart CUDA::nvtx3 CudaCustomLib ${NVTX_PLATFORM_LIBS})
    option(ENABLE_PROFILING "Enable profiling instrumentation" ON)
elseif(CMAKE_BUILD_TYPE STREQUAL "Release")
    # Release flags: Optimize for performance
    add_compile_options(
        "$<$<COMPILE_LANGUAGE:CUDA>:-g;-G;-O3;-use_fast_math>"
        "$<$<COMPILE_LANGUAGE:CXX>:-g3;-O3>"
    )
    set(CUDA_BASIC_LIB CUDA::cudart CudaCustomLib)
    option(ENABLE_PROFILING "Enable profiling instrumentation" OFF)
else()
    # Default build type (when CMAKE_BUILD_TYPE is not set)
    add_compile_options(
        "$<$<COMPILE_LANGUAGE:CUDA>:-g;-G;-O2>"
        "$<$<COMPILE_LANGUAGE:CXX>:-g3;-O2>"
    )
    set(CUDA_BASIC_LIB CUDA::cudart CUDA::nvtx3 CudaCustomLib ${NVTX_PLATFORM_LIBS})
    option(ENABLE_PROFILING "Enable profiling instrumentation" ON)
endif()

# Include profiling utilities
include(${CMAKE_CURRENT_SOURCE_DIR}/00.cmake_lib/inspect_profile.cmake)
include(${CMAKE_CURRENT_SOURCE_DIR}/00.cmake_lib/doxygen.cmake)

# Verbose PTX compilation (shows register usage)
option(VERBOSE_PTXAS "Show PTX compilation details" OFF)
if(VERBOSE_PTXAS)
    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} -Xptxas -v")
endif()

# GPU P2P Wrapper Library (Dual-driver system for module 56)
# This library bridges the GPL core driver and NVIDIA bridge driver
find_library(GPU_P2P_WRAPPER_LIB gpu_p2p_wrapper
    PATHS /usr/local/lib
    DOC "GPU P2P Wrapper Library for dual-driver architecture")

if(GPU_P2P_WRAPPER_LIB)
    message(STATUS "Found GPU P2P Wrapper Library: ${GPU_P2P_WRAPPER_LIB}")
    add_library(gpu_p2p_wrapper SHARED IMPORTED GLOBAL)
    set_target_properties(gpu_p2p_wrapper PROPERTIES
        IMPORTED_LOCATION ${GPU_P2P_WRAPPER_LIB})
else()
    message(WARNING "GPU P2P Wrapper Library not found - Module 56 benchmarks may fail to link")
    message(WARNING "Install with: cd 50.GPU-NVMe_Interaction/56.GPU_Queue_GPU_Buffer/driver && make -f Makefile.dual install")
endif()


add_subdirectory(00.demo)
add_subdirectory(00.demo_lib)

add_subdirectory(10.cuda_basic)
add_subdirectory(20.cuda_intermediate)
add_subdirectory(30.CUDA_Libraries)
add_subdirectory(40.cuda_advanced)
add_subdirectory(50.GPU-NVMe_Interaction)
add_subdirectory(60.LLM_Implementation)
add_subdirectory(70.GPU_Optimization)
add_subdirectory(80.Transformer)

set(MODULE_53_ROOT ${CMAKE_SOURCE_DIR}/50.GPU-NVMe_Interaction/53.NVMe_VFIO_Host_Layer)
add_custom_target(duplicate_code_check
    COMMAND ${Python3_EXECUTABLE} ${CMAKE_SOURCE_DIR}/scripts/check_duplicates.py
            --paths ${MODULE_53_ROOT}/src ${MODULE_53_ROOT}/test
            --min-lines 30
            --fail-on-duplicates
    WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
    COMMENT "Scanning Module 53 sources for duplicate code blocks"
)
