[project]
name = "korean-stock-mcp"
version = "0.1.0"
description = "MCP server for Korean stock market data (KOSPI/KOSDAQ)"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pykrx>=1.0.44",
    "finance-datareader>=0.9.70",
    "httpx>=0.27.0",
    "feedparser>=6.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.scripts]
korean-stock-mcp = "korean_stock_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/korean_stock_mcp"]

[dependency-groups]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
