[package]
name = "ffi_codegen"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cranelift-codegen = "0.110"
cranelift-object = "0.110"
cranelift-module = "0.110"
cranelift-frontend = "0.110"
target-lexicon = "0.13"
