[package]
name = "ffi_syscalls"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
# ONLY libc for raw syscalls - no other dependencies
libc = "0.2"

# Note: Profiles are ignored for workspace members - see rust/Cargo.toml
# These are here for documentation only
#
# TESTING NOTE: Due to workspace panic = "abort" settings, tests must be run
# in debug mode only:
#   cargo test -p ffi_syscalls          # ✓ Works (debug mode)
#   cargo test -p ffi_syscalls --release # ✗ Fails (abort + test incompatible)
#
[profile.release]
opt-level = "z"      # Optimize for size
lto = true           # Link-time optimization
codegen-units = 1    # Single codegen unit
panic = "abort"      # No unwinding
strip = true         # Strip symbols
