[package]
name = "simple-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[dependencies]
simple-common = { path = "../common" }
simple-parser = { path = "../parser" }
simple-compiler = { path = "../compiler" }
serde = { workspace = true }
serde_json = "1.0"
thiserror = { workspace = true }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
