[package]
name = "simple-pkg"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Package manager for Simple language"

[lints]
workspace = true

[dependencies]
# Manifest parsing
toml = "0.8"
simple-sdn = { path = "../sdn" }
serde = { version = "1", features = ["derive"] }

# Version handling
semver = "1"

# Network (for future registry support)
# reqwest = { version = "0.11", features = ["blocking"] }

# Git operations
# git2 = "0.18"

# Cache directories
dirs-next = "2"

# File operations
walkdir = "2"

# Collections
indexmap.workspace = true

# Error handling
thiserror.workspace = true
