[package]
name = "simple-runtime"
version = "0.1.0"
edition = "2021"
autotests = false

[lints]
workspace = true

# Build static library (rlib, staticlib) and dynamic library (cdylib)
# - rlib: Used for Rust-to-Rust linking (cargo dependencies)
# - staticlib: Used for native binary linking (libsimple_runtime.a)
# - cdylib: Used for dynamic linking (.so/.dylib/.dll)
[lib]
crate-type = ["rlib", "staticlib", "cdylib"]

[features]
default = ["cpu-simd"]
cpu-simd = ["rayon"]
vulkan = ["ash", "gpu-allocator", "spirv-reflect", "ash-window", "winit", "raw-window-handle"]
pytorch = ["tch"]  # PyTorch tensor operations
monoio-net = ["monoio"]  # Async networking with io_uring (channel-based)
monoio-direct = ["monoio", "monoio-net"]  # Direct monoio integration (zero-overhead async I/O)
ratatui-tui = ["dep:ratatui", "dep:crossterm"]  # Ratatui TUI framework (Send + Sync)
cuda = []  # CUDA GPU runtime (requires CUDA SDK)

[dependencies]
abfall = "0.1"
simple-common = { path = "../common" }
simple-sdn = { path = "../sdn" }
memmap2 = "0.9"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
indexmap = "2.0"
tracing = "0.1"
lazy_static = "1.4"
regex = "1.10"
thiserror = "1.0"
ctor = "0.2"  # Module initialization
# Networking dependencies
socket2 = "0.5"  # Low-level socket control
ureq = "2.10"    # HTTP client (blocking, simple)
# Async runtime with io_uring (thread-per-core)
monoio = { version = "0.2", features = ["sync", "macros"], optional = true }
num_cpus = "1.16"  # CPU topology detection for thread-per-core setup
# CPU parallel execution (TBB-style work-stealing scheduler)
rayon = { version = "1.10", optional = true }
# Random number generation (for data loading shuffle)
rand = "0.8"

# Vulkan GPU backend (optional)
ash = { version = "0.38", optional = true }
gpu-allocator = { version = "0.28", optional = true }
spirv-reflect = { version = "0.2", optional = true }
ash-window = { version = "0.13", optional = true }
winit = { version = "0.30", optional = true }
raw-window-handle = { version = "0.6", optional = true }

# PyTorch tensor operations (optional)
tch = { version = "0.18", optional = true }

# Ratatui TUI framework (optional, Send + Sync)
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }

# Infrastructure & Dependencies (#825-849)
# Allocators (#825-827)
mimalloc.workspace = true        # Fast thread-local allocator

# Threading & Concurrency (#828-832)
parking_lot.workspace = true     # Fast locks (2-3x faster than std::sync)
crossbeam.workspace = true       # Advanced concurrency utilities
dashmap.workspace = true         # Concurrent collections

# Hashing (#836-839)
ahash.workspace = true           # Fast hashing
sha1 = "0.10"                    # SHA1 cryptographic hash
sha2 = "0.10"                    # SHA256 cryptographic hash
xxhash-rust = { version = "0.8", features = ["xxh3"] }  # XXHash fast hashing

# File System (#916-923)
glob = "0.3"                     # Glob pattern matching
dirs-next = "2.0"                # Home directory detection

# Package Management
tar = "0.4"                      # TAR archive creation/extraction
flate2 = "1.0"                   # gzip compression
xz2 = "0.1"                      # XZ decompression for UPX releases
lzma-rust = "0.1"                # Pure Rust LZMA for self-extracting

# Sandboxing (#916-923)
# Resource limits (cross-platform)
rlimit = "0.10"                  # Resource limit control

# Platform-specific sandboxing
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["process", "resource", "signal", "user", "sched", "term", "time", "mount"] }  # Unix system calls (mount for sandbox, term includes pty, time for select)
libc = "0.2"                     # C library bindings

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_JobObjects", "Win32_System_Threading", "Win32_Foundation"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = "3.8"  # Temporary files and directories for testing
criterion = "0.5"  # Benchmarking framework

[[bench]]
name = "concurrent_ffi_bench"
harness = false

[[test]]
name = "upx_integration_test"
path = "tests/upx_integration_test.rs"

[[test]]
name = "upx_compress_test"
path = "tests/upx_compress_test.rs"
