[package]
name = "simple-tests-new"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[features]
vulkan = ["simple-compiler/vulkan", "simple-runtime/vulkan"]

[dependencies]
simple-driver = { path = "../driver" }
simple-compiler = { path = "../compiler" }
simple-parser = { path = "../parser" }
simple-loader = { path = "../loader" }
simple-runtime = { path = "../runtime" }
simple-common = { path = "../common" }
simple-type = { path = "../type" }
simple_mock_helper = { path = "../util/simple_mock_helper" }

[dev-dependencies]
ctor = "0.2"
tempfile = "3"
assert_cmd = "2"
predicates = "3"
chrono = "0.4"
cucumber = "0.21"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
toml = "0.8"

# Test executables per test.md policy
[[test]]
name = "unit"
path = "unit/main.rs"

[[test]]
name = "integration"
path = "integration/main.rs"

[[test]]
name = "system"
path = "system/main.rs"

[[test]]
name = "environment"
path = "environment/main.rs"

[[test]]
name = "bdd_mixins"
path = "bdd/main.rs"
harness = false  # cucumber provides its own test harness

[[test]]
name = "contract"
path = "contract/main.rs"
