[package]
name = "simple-common"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
# Infrastructure & Dependencies (#839)
# Hash trait interface
ahash.workspace = true           # Fast hashing for HashMap defaults

# Memory-mapped file reading (#820)
memmap2.workspace = true         # 15% faster file reading for large files

[dev-dependencies]
tempfile = "3.8"
