[package]
name = "simple-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
simple-parser = { path = "../parser" }
simple-loader = { path = "../loader" }
simple-runtime = { path = "../runtime" }
thiserror.workspace = true
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-jit = "0.116"
target-lexicon = "0.13"
tracing = "0.1"
simple-common = { path = "../common" }
simple-type = { path = "../type" }
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
simple-loader = { path = "../loader" }
