[package]
name = "simple-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
# Enable LLVM backend for 32-bit and broader target support
llvm = ["inkwell"]
llvm-gpu = ["llvm"]
llvm-tests = []

[dependencies]
simple-parser = { path = "../parser" }
simple-loader = { path = "../loader" }
simple-runtime = { path = "../runtime" }
simple-native-loader = { path = "../native_loader" }
simple-dependency-tracker = { path = "../dependency_tracker" }
thiserror.workspace = true
toml = "0.8"
regex = "1.11"
# Enable all-arch for cross-compilation support (x86_64, aarch64, riscv64, s390x)
# Note: Cranelift does NOT support any 32-bit architectures
cranelift-codegen = { version = "0.116", default-features = false, features = ["std", "unwind", "all-arch"] }
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-jit = "0.116"
target-lexicon = "0.13"
tracing = "0.1"
simple-common = { path = "../common" }
simple-type = { path = "../type" }
lazy_static = "1.4"
ureq = "2.10"  # HTTP client for interpreter networking
serde.workspace = true
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }

# Infrastructure & Dependencies (#825-849)
# Threading & Concurrency (#828-832)
rayon.workspace = true           # Parallel compilation
dashmap.workspace = true         # Concurrent symbol tables
parking_lot.workspace = true     # Fast locks
crossbeam.workspace = true       # Advanced concurrency utilities

# Hashing (#836-839)
ahash.workspace = true           # Fast hashing for HashMaps

# Data Structures (#840-845)
typed-arena.workspace = true     # Arena allocation for HIR/MIR
smallvec.workspace = true        # Stack-local small vectors
indexmap.workspace = true        # Ordered hash maps

# String Interning (#813-814)
lasso.workspace = true           # Symbol interning for linker

# LLVM backend (optional) - requires LLVM 18 toolchain
inkwell = { version = "0.5", optional = true, features = ["llvm18-0"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
simple-loader = { path = "../loader" }
